--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
   "name": "whatsapp-system",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "Sistema WhatsApp con Node.js y whatsapp-web.js",
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "multer": "^2.0.2",
     "pm2": "^6.0.13",
     "qrcode": "^1.5.4",
     "socket.io": "^4.8.1",
     "sqlite3": "^5.1.7",
-    "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#main"
+    "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#main",
+    "xlsx": "^0.18.5"
   }
 }
+
