--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
   "description": "Sistema WhatsApp con Node.js y whatsapp-web.js",
   "dependencies": {
     "bcryptjs": "^3.0.3",
+    "connect-mongo": "^6.0.0",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "mongoose": "^9.0.1",
     "multer": "^2.0.2",
     "pm2": "^6.0.13",
     "qrcode": "^1.5.4",
     "socket.io": "^4.8.1",
-    "sqlite3": "^5.1.7",
     "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#main",
     "xlsx": "^0.18.5"
   }
 }
-
